Bug fix reward train

--- a/reward_model/mse_regression/run.ipynb
+++ b/reward_model/mse_regression/run.ipynb
@@ -82,10 +82,10 @@
         "    wandb=dict(\n",
         "        api=\"60fce56bfaec85b8d6bc78bfac2086891f5afe54\",\n",
         "        project_name=\"CQA_RLHF\",\n",
-        "        args=dict(job_type=\"train\", group=\"reward\", name=\"125M-lr_2e_5-1_ws-api_usage-freezed_3\"),\n",
+        "        args=dict(job_type=\"train\", group=\"reward\", name=\"125M-lr_2e_5-1_ws-api_usage-with_bred\"),\n",
         "    ),\n",
         "    data=dict(\n",
-        "        data_dir=r\"/kaggle/input/python-qa-api-usage/1.0-data-div-ans-sep-api-usage.json\",\n",
+        "        data_dir=r\"/kaggle/input/python-qa-api-gen/1.0-data-div-ans-sep-api-usage-with-gen.json\",\n",
         "        max_length=512,\n",
         "        batch_size=8,\n",
         "        truncate_promt = True,\n",
@@ -110,17 +110,17 @@
         "        ),\n",
         "        ckpt_path=None,\n",
         "        params=dict(\n",
-        "            accelerator=\"tpu\",\n",
-        "            max_epochs=50,\n",
+        "            accelerator=\"gpu\",\n",
+        "            max_epochs=20,\n",
         "            accumulate_grad_batches=1,\n",
         "            gradient_clip_val=1,\n",
         "            precision=\"16\",\n",
-        "            val_check_interval=104,\n",
+        "            val_check_interval=460,\n",
         "            overfit_batches=0,  # 0 for train\n",
         "            num_sanity_val_steps=2,\n",
         "            log_every_n_steps = 20,\n",
         "#             limit_train_batches=100,\n",
-        "#             strategy=\"deepspeed_stage_2_offload\"\n",
+        "            strategy=\"ddp\",\n",
         "        ),\n",
         "    ),\n",
         ")\n",
