--- a/sft/run.ipynb
+++ b/sft/run.ipynb
@@ -12,7 +12,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install pytorch-lightning==1.9.2 transformers torchmetrics deepspeed nltk wandb\n"
+        "!pip install pytorch-lightning==1.9.2 transformers torchmetrics deepspeed nltk wandb datasets\n"
       ]
     },
     {
@@ -199,7 +199,7 @@
         "        project_name=\"CQA_RLHF\",\n",
         "    ),\n",
         "    data=dict(\n",
-        "        data_dir=r\"/kaggle/input/python-qa-api-usage/1.0-data-div-ans-sep-api-usage.json\",\n",
+        "        data_dir=r\"/content/drive/MyDrive/Colab Notebooks/vkr_data/data/1.0-data-div-ans-sep-api-usage.json\",\n",
         "        max_length=512,\n",
         "        truncate_promt=True,\n",
         "        split='test',\n",
