Init PPO, freeze per layers types

--- a/sft/run.ipynb
+++ b/sft/run.ipynb
@@ -118,7 +118,12 @@
         "        adam_betas=[0.9, 0.95],\n",
         "        weight_decay=0.001,\n",
         "        do_compute_metrics = True,\n",
-        "        nr_frozen_epochs = 3,\n",
+        "        freeze_emb = True,\n",
+        "        freeze_ln = False,\n",
+        "        freeze_attn = False,\n",
+        "        freeze_ff = True,\n",
+        "        freeze_other = True,\n",
+        "        layers_not_to_freeze = [0, 11],\n",
         "    ),\n",
         "    trainer=dict(\n",
         "        checkpoint=dict(\n",
