requirements fixed; reward config fixed

--- a/sft/run.ipynb
+++ b/sft/run.ipynb
@@ -101,15 +101,15 @@
         "    model_name=\"EleutherAI/gpt-neo-125m\",\n",
         "    wandb=dict(\n",
         "        api=\"60fce56bfaec85b8d6bc78bfac2086891f5afe54\",\n",
-        "        project_name=\"CQA_RLHF\",\n",
-        "        args=dict(job_type=\"train\", group=\"sft\", name=\"125M-lr_2e_5-1_ws-api_usage-freezed_3\"),\n",
+        "        project_name=\"CQA_RLHF_v2\",\n",
+        "        args=dict(job_type=\"train\", group=\"sft\", name=\"125M-lr_2e_5-1_ws-api_usage\"),\n",
         "    ),\n",
         "    data=dict(\n",
         "        data_dir=r\"/kaggle/input/python-qa-api-usage/1.0-data-div-ans-sep-api-usage.json\",\n",
         "        max_length=512,\n",
         "        batch_size=8,\n",
         "        truncate_promt=True,\n",
-        "        on_tpu = True,\n",
+        "        on_tpu = False,\n",
         "    ),\n",
         "    model_params=dict(\n",
         "        learning_rate=2e-5,\n",
@@ -118,9 +118,9 @@
         "        adam_betas=[0.9, 0.95],\n",
         "        weight_decay=0.001,\n",
         "        do_compute_metrics = True,\n",
-        "        freeze_emb = True,\n",
-        "        freeze_ln = False,\n",
-        "        freeze_attn = False,\n",
+        "        freeze_emb = False,\n",
+        "        freeze_ln = True,\n",
+        "        freeze_attn = True,\n",
         "        freeze_ff = True,\n",
         "        freeze_other = True,\n",
         "        layers_not_to_freeze = [0, 11],\n",
@@ -129,23 +129,23 @@
         "        checkpoint=dict(\n",
         "            every_n_train_steps=1000,\n",
         "            dirpath=r\"/kaggle/working/Checkpoints\",\n",
-        "            log_obg = 'val_loss',\n",
-        "            mode = 'min',\n",
+        "            log_obg = 'val_bleu',\n",
+        "            mode = 'max',\n",
         "\n",
         "        ),\n",
         "        ckpt_path=None,\n",
         "        params=dict(\n",
-        "            accelerator=\"tpu\",\n",
-        "            max_epochs=50,\n",
+        "            accelerator=\"gpu\",\n",
+        "            max_epochs=10,\n",
         "            accumulate_grad_batches=1,\n",
         "            gradient_clip_val=1,\n",
         "            precision=\"16\",\n",
-        "            val_check_interval=104,\n",
+        "            val_check_interval=435,\n",
         "            overfit_batches=0,  # 0 for train\n",
         "            num_sanity_val_steps=2,\n",
         "            log_every_n_steps = 20,\n",
         "#             limit_train_batches=100,\n",
-        "#             strategy=\"deepspeed_stage_2_offload\"\n",
+        "            strategy=\"ddp\"\n",
         "        ),\n",
         "    ),\n",
         ")\n",
