--- a/reward_model/regression/run.ipynb
+++ b/reward_model/regression/run.ipynb
@@ -104,6 +104,7 @@
         "        freeze_ff = True,\n",
         "        freeze_other = True,\n",
         "        layers_not_to_freeze = [0, 11],\n",
+        "        mae_loss = False,\n",
         "    ),\n",
         "    trainer=dict(\n",
         "        checkpoint=dict(\n",
