--- a/rlhf/rlhf_test.ipynb
+++ b/rlhf/rlhf_test.ipynb
@@ -60,7 +60,8 @@
       },
       "outputs": [],
       "source": [
-        "from data.data_utils import build_dataset, collator"
+        "from data.data_utils import build_dataset, collator\n",
+        "from training_utils.freeze import freeze_model"
       ]
     },
     {
@@ -73,32 +74,41 @@
       "source": [
         "config = PPOConfig(\n",
         "    model_name=\"Myashka/125M_GPTneo_sft_tuned\",\n",
-        "    steps = 20000,\n",
+        "    steps=20000,\n",
         "    learning_rate=1.41e-5,\n",
         "    log_with=\"wandb\",\n",
-        "    batch_size= 4,\n",
+        "    batch_size=4,\n",
         "    optimize_cuda_cache=True,\n",
-        "    gradient_accumulation_steps = 1,\n",
-        "    tracker_project_name = 'CQA_RLHF',\n",
-        "    max_grad_norm = None,\n",
-        "    ppo_epochs = 4, # default\n",
-        "    seed = 42,\n",
+        "    gradient_accumulation_steps=1,\n",
+        "    tracker_project_name='CQA_RLHF_v2',\n",
+        "    max_grad_norm=None,\n",
+        "    ppo_epochs=4,  # default\n",
+        "    seed=42,\n",
         ")\n",
         "\n",
-        "data_config = dict(data_file_path = '/content/drive/MyDrive/Colab Notebooks/vkr_data/data/1.0-data-div-ans-sep-api-usage.json',\n",
+        "data_config = dict(data_file_path='/content/drive/MyDrive/Colab Notebooks/vkr_data/data/1.0-data-div-ans-sep-api-usage.json',\n",
         "                   max_length_promt=512,\n",
         "                   max_length=1024,\n",
         "                   truncate_promt=True,\n",
-        "                   padding=False)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import yaml"
+        "                   padding=False)\n",
+        "\n",
+        "freeze_config = dict(\n",
+        "    do_compute_metrics=True,\n",
+        "    freeze_emb=True,\n",
+        "    freeze_ln=False,\n",
+        "    freeze_attn=True,\n",
+        "    freeze_ff=True,\n",
+        "    freeze_other=True,\n",
+        "    layers_not_to_freeze=[0, 11],\n",
+        ")\n",
+        "\n",
+        "reward_config = {\n",
+        "    'batch_size': 16,\n",
+        "}\n",
+        "\n",
+        "save_config = {\n",
+        "    'save_interval': 15\n",
+        "}"
       ]
     },
     {
@@ -332,6 +342,8 @@
         "model = AutoModelForCausalLMWithValueHead.from_pretrained(config.model_name)\n",
         "ref_model = AutoModelForCausalLMWithValueHead.from_pretrained(config.model_name)\n",
         "tokenizer = AutoTokenizer.from_pretrained(config.model_name)\n",
+        "\n",
+        "model = freeze_model(model, freeze_config)\n",
         "\n",
         "tokenizer.pad_token = tokenizer.eos_token"
       ]
@@ -654,11 +666,16 @@
         "if ppo_trainer.accelerator.num_processes == 1:\n",
         "    device = 0 if torch.cuda.is_available() else \"cpu\"  # to avoid a `pipeline` bug\n",
         "\n",
-        "\n",
-        "reward_config = {\n",
-        "    'batch_size': 2,\n",
-        "}\n",
         "reward_pipe = Reward_pipeline(\"Myashka/125M_GPTneo_reward_gen\", device)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import gc"
       ]
     },
     {
@@ -706,16 +723,20 @@
         "    for query in query_tensors:\n",
         "        response = ppo_trainer.generate(query, **generation_kwargs)\n",
         "        response_tensors.append(response.squeeze())\n",
-        "    batch[\"question_answer\"] = tokenizer.batch_decode(response_tensors, skip_special_tokens=True)\n",
-        "    # batch[\"answer\"] = [tokenizer.decode(r.squeeze()[len(query_idx):], skip_special_tokens=True) for r, query_idx in zip(response_tensors, batch[\"input_ids\"])]\n",
+        "    # batch[\"question_answer\"] = tokenizer.batch_decode(response_tensors, skip_special_tokens=True)\n",
+        "    batch[\"query\"] = [tokenizer.decode(query_idx, skip_special_tokens=True) for query_idx in batch[\"input_ids\"]]\n",
+        "    batch[\"response\"] = [tokenizer.decode(r.squeeze()[len(query_idx):], skip_special_tokens=True) for r, query_idx in zip(response_tensors, batch[\"input_ids\"])]\n",
         "\n",
         "    #### Compute sentiment score\n",
-        "    # texts = [q + r for q, r in zip(batch[\"question_promt\"], batch[\"answer\"])]\n",
-        "    rewards = reward_pipe(batch[\"question_answer\"], reward_config['batch_size'])\n",
+        "    texts = [q + r for q, r in zip(batch[\"query\"], batch[\"response\"])]\n",
+        "    rewards = reward_pipe(texts, reward_config['batch_size'])\n",
         "\n",
         "    #### Run PPO step\n",
         "    stats = ppo_trainer.step(query_tensors, response_tensors, rewards)\n",
-        "    ppo_trainer.log_stats(stats, batch, rewards)"
+        "    ppo_trainer.log_stats(stats, batch, rewards)\n",
+        "\n",
+        "    if epoch + 1 % save_config['save_interval'] == 0:\n",
+        "        model.save_pretrained(f'ckpts_ppo/ppo_{epoch}.ckpt')"
       ]
     },
     {
