--- a/rlhf/rlhf_test.ipynb
+++ b/rlhf/rlhf_test.ipynb
@@ -84,6 +84,7 @@
         "    max_grad_norm=None,\n",
         "    ppo_epochs=4,  # default\n",
         "    seed=42,\n",
+        "    remove_unused_columns=False,\n",
         ")\n",
         "\n",
         "data_config = dict(data_file_path='/content/drive/MyDrive/Colab Notebooks/vkr_data/data/1.0-data-div-ans-sep-api-usage.json',\n",
@@ -93,7 +94,6 @@
         "                   padding=False)\n",
         "\n",
         "freeze_config = dict(\n",
-        "    do_compute_metrics=True,\n",
         "    freeze_emb=True,\n",
         "    freeze_ln=False,\n",
         "    freeze_attn=True,\n",
@@ -724,11 +724,11 @@
         "        response = ppo_trainer.generate(query, **generation_kwargs)\n",
         "        response_tensors.append(response.squeeze())\n",
         "    # batch[\"question_answer\"] = tokenizer.batch_decode(response_tensors, skip_special_tokens=True)\n",
-        "    batch[\"query\"] = [tokenizer.decode(query_idx, skip_special_tokens=True) for query_idx in batch[\"input_ids\"]]\n",
+        "    # batch[\"query\"] = [tokenizer.decode(query_idx, skip_special_tokens=True) for query_idx in batch[\"input_ids\"]]\n",
         "    batch[\"response\"] = [tokenizer.decode(r.squeeze()[len(query_idx):], skip_special_tokens=True) for r, query_idx in zip(response_tensors, batch[\"input_ids\"])]\n",
         "\n",
         "    #### Compute sentiment score\n",
-        "    texts = [q + r for q, r in zip(batch[\"query\"], batch[\"response\"])]\n",
+        "    texts = [q + r for q, r in zip(batch[\"question_promt\"], batch[\"response\"])]\n",
         "    rewards = reward_pipe(texts, reward_config['batch_size'])\n",
         "\n",
         "    #### Run PPO step\n",
