Fixed batch query

--- a/rlhf/rlhf_test.ipynb
+++ b/rlhf/rlhf_test.ipynb
@@ -77,7 +77,7 @@
         "    steps=20000,\n",
         "    learning_rate=1.41e-5,\n",
         "    log_with=\"wandb\",\n",
-        "    batch_size=4,\n",
+        "    batch_size=128,\n",
         "    optimize_cuda_cache=True,\n",
         "    gradient_accumulation_steps=1,\n",
         "    tracker_project_name='CQA_RLHF_v2',\n",
@@ -672,15 +672,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import gc"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -728,7 +719,7 @@
         "    batch[\"response\"] = [tokenizer.decode(r.squeeze()[len(query_idx):], skip_special_tokens=True) for r, query_idx in zip(response_tensors, batch[\"input_ids\"])]\n",
         "\n",
         "    #### Compute sentiment score\n",
-        "    texts = [q + r for q, r in zip(batch[\"question_promt\"], batch[\"response\"])]\n",
+        "    texts = [q + r for q, r in zip(batch[\"query\"], batch[\"response\"])]\n",
         "    rewards = reward_pipe(texts, reward_config['batch_size'])\n",
         "\n",
         "    #### Run PPO step\n",
