--- a/rlhf/rlhf_test.ipynb
+++ b/rlhf/rlhf_test.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -10,22 +10,21 @@
         "id": "b30DSX1xCa47",
         "outputId": "ab59399e-a9da-409b-a266-eec7d26dec82"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Successfully installed GitPython-3.1.31 accelerate-0.18.0 aiohttp-3.8.4 aiosignal-1.3.1 async-timeout-4.0.2 datasets-2.11.0 dill-0.3.6 docker-pycreds-0.4.0 frozenlist-1.3.3 gitdb-4.0.10 huggingface-hub-0.13.4 multidict-6.0.4 multiprocess-0.70.14 pathtools-0.1.2 responses-0.18.0 sentry-sdk-1.20.0 setproctitle-1.3.2 smmap-5.0.0 tokenizers-0.13.3 transformers-4.28.1 trl-0.4.1 wandb-0.15.0 xxhash-3.2.0 yarl-1.8.2\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "%pip install transformers trl wandb"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Imports"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "05lMI2g2CmkU"
       },
@@ -33,40 +32,39 @@
       "source": [
         "import torch\n",
         "from tqdm import tqdm\n",
-        "import pandas as pd\n",
+        "from os.path import join as opj\n",
         "\n",
         "tqdm.pandas()\n",
         "\n",
-        "from transformers import AutoModelForSequenceClassification, AutoTokenizer\n",
-        "from datasets import load_dataset\n",
-        "\n",
+        "from transformers import AutoTokenizer\n",
         "from trl import PPOTrainer, PPOConfig, AutoModelForCausalLMWithValueHead, set_seed"
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from data.data_utils import build_dataset, collator\n",
+        "from training_utils.freeze import freeze_model\n",
+        "from training_utils.checkpoint import save_checkpoint\n",
+        "from reward_pipelines.regression_reward import Reward_pipeline"
+      ]
+    },
+    {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "PLNuIoSgCywu"
       },
       "source": [
-        "## Dataset and Data Collator"
+        "## Configs"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "id": "wmLQyYcqIneQ"
-      },
-      "outputs": [],
-      "source": [
-        "from data.data_utils import build_dataset, collator\n",
-        "from training_utils.freeze import freeze_model"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "TdbwkAHUFQaq"
       },
@@ -89,7 +87,7 @@
         "\n",
         "data_config = dict(data_file_path='/content/drive/MyDrive/Colab Notebooks/vkr_data/data/1.0-data-div-ans-sep-api-usage.json',\n",
         "                   max_length_promt=512,\n",
-        "                   max_length=1024,\n",
+        "                   max_length=768,\n",
         "                   truncate_promt=True,\n",
         "                   padding=False)\n",
         "\n",
@@ -103,12 +101,36 @@
         ")\n",
         "\n",
         "reward_config = {\n",
+        "    'reward_model_name': \"Myashka/125M_GPTneo_reward_gen\",\n",
         "    'batch_size': 16,\n",
         "}\n",
         "\n",
         "save_config = {\n",
-        "    'save_interval': 15\n",
-        "}"
+        "    'save_interval': 16,\n",
+        "    'checkpoint_dir': '/ckpts_ppo'\n",
+        "}\n",
+        "\n",
+        "generation_kwargs = {\n",
+        "    \"min_length\": -1,\n",
+        "    \"top_k\": 0.0,\n",
+        "    \"top_p\": 1.0,\n",
+        "    \"do_sample\": True,\n",
+        "    \"max_new_tokens\": 256,\n",
+        "}\n",
+        "\n",
+        "config.data_config = data_config\n",
+        "config.freeze_config = freeze_config\n",
+        "config.save_config = save_config\n",
+        "config.generation_kwargs = config\n",
+        "config.reward_config = reward_config"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Build Dataset"
       ]
     },
     {
@@ -250,7 +272,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -294,50 +316,7 @@
         "id": "z3kZyXnoPiSa",
         "outputId": "0a82031f-282d-40c8-ebd8-e9dbf51a1d7a"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "c41d116d88ac44fe80dae5bffd115b80",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading (…)lve/main/config.json:   0%|          | 0.00/1.08k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "12c11d478cb2466288e0282bed0be44f",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading pytorch_model.bin:   0%|          | 0.00/551M [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "20a44054430b49b3bb68e4029c230aa2",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading (…)neration_config.json:   0%|          | 0.00/119 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "model = AutoModelForCausalLMWithValueHead.from_pretrained(config.model_name)\n",
         "ref_model = AutoModelForCausalLMWithValueHead.from_pretrained(config.model_name)\n",
@@ -350,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "ZPBvP9P4gpj4"
       },
@@ -370,7 +349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -379,101 +358,22 @@
         "id": "rmPumoxDPeuM",
         "outputId": "54e8f063-daeb-4f3e-e47d-2e37bf868120"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/javascript": "\n        window._wandbApiKey = new Promise((resolve, reject) => {\n            function loadScript(url) {\n            return new Promise(function(resolve, reject) {\n                let newScript = document.createElement(\"script\");\n                newScript.onerror = reject;\n                newScript.onload = resolve;\n                document.body.appendChild(newScript);\n                newScript.src = url;\n            });\n            }\n            loadScript(\"https://cdn.jsdelivr.net/npm/postmate/build/postmate.min.js\").then(() => {\n            const iframe = document.createElement('iframe')\n            iframe.style.cssText = \"width:0;height:0;border:none\"\n            document.body.appendChild(iframe)\n            const handshake = new Postmate({\n                container: iframe,\n                url: 'https://wandb.ai/authorize'\n            });\n            const timeout = setTimeout(() => reject(\"Couldn't auto authenticate\"), 5000)\n            handshake.then(function(child) {\n                child.on('authorize', data => {\n                    clearTimeout(timeout)\n                    resolve(data)\n                });\n            });\n            })\n        });\n    ",
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /root/.netrc\n"
-          ]
-        },
-        {
-          "data": {
-            "text/html": [
-              "Tracking run with wandb version 0.15.0"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/html": [
-              "Run data is saved locally in <code>/content/wandb/run-20230420_143528-0jt44158</code>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/html": [
-              "Syncing run <strong><a href='https://wandb.ai/myashka/trl/runs/0jt44158' target=\"_blank\">lunar-water-9</a></strong> to <a href='https://wandb.ai/myashka/trl' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/html": [
-              " View project at <a href='https://wandb.ai/myashka/trl' target=\"_blank\">https://wandb.ai/myashka/trl</a>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/html": [
-              " View run at <a href='https://wandb.ai/myashka/trl/runs/0jt44158' target=\"_blank\">https://wandb.ai/myashka/trl/runs/0jt44158</a>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "ppo_trainer = PPOTrainer(config, model, ref_model, tokenizer, dataset=dataset, data_collator=collator, num_shared_layers=None)"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "attachments": {},
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "from reward_pipelines.regression_reward import Reward_pipeline"
+        "## Reward pipeline"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -561,112 +461,31 @@
         "id": "yjcFA-6HQQfk",
         "outputId": "6593beee-429d-4202-e0f5-cac220b5b17b"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "775fa48c434e4b3993fdd3ac02343e7a",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading (…)lve/main/config.json:   0%|          | 0.00/1.22k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "4cc517e989cf4495b715d07bdc26a0e2",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading pytorch_model.bin:   0%|          | 0.00/551M [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "1d01fb117ef34327be0b93c0b2d49bcd",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading (…)okenizer_config.json:   0%|          | 0.00/722 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "3887389b080d42f7971c6810784e42f0",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading (…)olve/main/vocab.json:   0%|          | 0.00/798k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "968b0da97a3e4a208a7473a0749edb3c",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading (…)olve/main/merges.txt:   0%|          | 0.00/456k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "a939df30862a4c05bcc58cbfd6a63447",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading (…)/main/tokenizer.json:   0%|          | 0.00/2.11M [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "875a720623494b02a437619ddefcb4b2",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading (…)cial_tokens_map.json:   0%|          | 0.00/438 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "device = ppo_trainer.accelerator.device\n",
         "if ppo_trainer.accelerator.num_processes == 1:\n",
         "    device = 0 if torch.cuda.is_available() else \"cpu\"  # to avoid a `pipeline` bug\n",
         "\n",
-        "reward_pipe = Reward_pipeline(\"Myashka/125M_GPTneo_reward_gen\", device)"
+        "reward_pipe = Reward_pipeline(reward_config['reward_model_name'], device)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import wandb\n",
+        "run = wandb.init(reinit=False)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Training part"
       ]
     },
     {
@@ -679,32 +498,10 @@
         "id": "3xBhRS6sR-0R",
         "outputId": "4a57ca68-7828-40a2-b3dd-02c665953ddf"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "0it [00:00, ?it/s]You're using a GPT2TokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n",
-            "/usr/local/lib/python3.9/dist-packages/trl/trainer/ppo_trainer.py:949: UserWarning: The game logs will not be logged because the batch does not contain the keys 'query' and 'response'. \n",
-            "  warnings.warn(\n",
-            "7it [03:28, 26.68s/it]Exception ignored in: <function _xla_gc_callback at 0x7fda3c8af160>\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/usr/local/lib/python3.9/dist-packages/jax/_src/lib/__init__.py\", line 97, in _xla_gc_callback\n",
-            "    def _xla_gc_callback(*args):\n",
-            "KeyboardInterrupt: \n",
-            "8it [03:51, 25.69s/it]"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "generation_kwargs = {\n",
-        "    \"min_length\": -1,\n",
-        "    \"top_k\": 0.0,\n",
-        "    \"top_p\": 1.0,\n",
-        "    \"do_sample\": True,\n",
-        "    \"pad_token_id\": tokenizer.eos_token_id,\n",
-        "    \"max_new_tokens\": 512,\n",
-        "}\n",
+        "generation_kwargs[\"pad_token_id\"] = tokenizer.eos_token_id\n",
+        "best_reward = -100\n",
         "\n",
         "\n",
         "for epoch, batch in tqdm(enumerate(ppo_trainer.dataloader)):\n",
@@ -726,8 +523,17 @@
         "    stats = ppo_trainer.step(query_tensors, response_tensors, rewards)\n",
         "    ppo_trainer.log_stats(stats, batch, rewards)\n",
         "\n",
-        "    if epoch + 1 % save_config['save_interval'] == 0:\n",
-        "        model.save_pretrained(f'ckpts_ppo/ppo_{epoch}.ckpt')"
+        "    mean_reward = torch.mean(torch.tensor(rewards))\n",
+        "\n",
+        "    if (epoch + 1) % save_config['save_interval'] == 0:\n",
+        "        save_checkpoint(model, run, epoch, mean_reward, save_config['checkpoint_dir'], 'ppo_checkpoint')\n",
+        "\n",
+        "    if mean_reward > best_reward:\n",
+        "        save_checkpoint(model, run, epoch, mean_reward, save_config['checkpoint_dir'], 'max_reward_ppo')\n",
+        "\n",
+        "        best_reward = mean_reward\n",
+        "\n",
+        "save_checkpoint(model, run, epoch, mean_reward, save_config['checkpoint_dir'], 'ppo_checkpoint')"
       ]
     },
     {
