--- a/rlhf/rlhf_test.ipynb
+++ b/rlhf/rlhf_test.ipynb
@@ -32,7 +32,6 @@
       "source": [
         "import torch\n",
         "from tqdm import tqdm\n",
-        "from os.path import join as opj\n",
         "\n",
         "tqdm.pandas()\n",
         "\n",
@@ -83,6 +82,9 @@
         "    ppo_epochs=4,  # default\n",
         "    seed=42,\n",
         "    remove_unused_columns=False,\n",
+        "    tracker_kwargs = {'name': 'ppo-train-bs_128-mbs_8',\n",
+        "                      \"group\": 'rl_ppo'},\n",
+        "    forward_batch_size = 16,\n",
         ")\n",
         "\n",
         "data_config = dict(data_file_path='/content/drive/MyDrive/Colab Notebooks/vkr_data/data/1.0-data-div-ans-sep-api-usage.json',\n",
@@ -533,7 +535,7 @@
         "\n",
         "        best_reward = mean_reward\n",
         "\n",
-        "save_checkpoint(model, run, epoch, mean_reward, save_config['checkpoint_dir'], 'ppo_checkpoint')"
+        "save_checkpoint(model, run, epoch, mean_reward, save_config['checkpoint_dir'], 'last_checkpoint')"
       ]
     },
     {
