Added global epoches, requirements updated

--- a/rlhf/rlhf_test.ipynb
+++ b/rlhf/rlhf_test.ipynb
@@ -3,6 +3,15 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip3 install numpy --pre torch --force-reinstall --index-url https://download.pytorch.org/whl/nightly/cu117"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -74,7 +83,7 @@
         "    steps=20000,\n",
         "    learning_rate=1.41e-5,\n",
         "    log_with=\"wandb\",\n",
-        "    batch_size=128,\n",
+        "    batch_size=64,\n",
         "    optimize_cuda_cache=True,\n",
         "    gradient_accumulation_steps=1,\n",
         "    tracker_project_name='CQA_RLHF_v2',\n",
@@ -82,29 +91,29 @@
         "    ppo_epochs=4,  # default\n",
         "    seed=42,\n",
         "    remove_unused_columns=False,\n",
-        "    tracker_kwargs = {'name': 'ppo-train-bs_128-mbs_8',\n",
+        "    tracker_kwargs = {'name': 'ppo-train-bs_64-mbs_8-fr_0-256-256',\n",
         "                      \"group\": 'rl_ppo'},\n",
-        "    forward_batch_size = 16,\n",
+        "    forward_batch_size = 8,\n",
         ")\n",
         "\n",
-        "data_config = dict(data_file_path='/content/drive/MyDrive/Colab Notebooks/vkr_data/data/1.0-data-div-ans-sep-api-usage.json',\n",
-        "                   max_length_promt=512,\n",
-        "                   max_length=768,\n",
+        "data_config = dict(data_file_path='/root/CQA_RLHF/data/1.0-data-div-ans-sep-api-usage.json',\n",
+        "                   max_length_promt=256,\n",
+        "                   max_length=512,\n",
         "                   truncate_promt=True,\n",
         "                   padding=False)\n",
         "\n",
         "freeze_config = dict(\n",
         "    freeze_emb=True,\n",
-        "    freeze_ln=False,\n",
+        "    freeze_ln=True,\n",
         "    freeze_attn=True,\n",
         "    freeze_ff=True,\n",
-        "    freeze_other=True,\n",
-        "    layers_not_to_freeze=[0, 11],\n",
+        "    freeze_other=False,\n",
+        "    layers_not_to_freeze=[0],\n",
         ")\n",
         "\n",
         "reward_config = {\n",
         "    'reward_model_name': \"Myashka/125M_GPTneo_reward_gen\",\n",
-        "    'batch_size': 16,\n",
+        "    'batch_size': 8,\n",
         "}\n",
         "\n",
         "save_config = {\n",
@@ -503,39 +512,41 @@
       "outputs": [],
       "source": [
         "generation_kwargs[\"pad_token_id\"] = tokenizer.eos_token_id\n",
-        "best_reward = -100\n",
+        "best_reward = float('-inf')\n",
+        "global_epoches = 10\n",
         "\n",
         "\n",
-        "for epoch, batch in tqdm(enumerate(ppo_trainer.dataloader)):\n",
-        "    query_tensors = batch[\"input_ids\"]\n",
-        "    response_tensors = []\n",
+        "for global_epo in tqdm(range(global_epoches)):\n",
+        "    for epoch, batch in tqdm(enumerate(ppo_trainer.dataloader)):\n",
+        "        query_tensors = batch[\"input_ids\"]\n",
+        "        response_tensors = []\n",
         "\n",
-        "    for query in query_tensors:\n",
-        "        response = ppo_trainer.generate(query, **generation_kwargs)\n",
-        "        response_tensors.append(response.squeeze())\n",
-        "    # batch[\"question_answer\"] = tokenizer.batch_decode(response_tensors, skip_special_tokens=True)\n",
-        "    # batch[\"query\"] = [tokenizer.decode(query_idx, skip_special_tokens=True) for query_idx in batch[\"input_ids\"]]\n",
-        "    batch[\"response\"] = [tokenizer.decode(r.squeeze()[len(query_idx):], skip_special_tokens=True) for r, query_idx in zip(response_tensors, batch[\"input_ids\"])]\n",
+        "        for query in query_tensors:\n",
+        "            response = ppo_trainer.generate(query, **generation_kwargs)\n",
+        "            response_tensors.append(response.squeeze())\n",
+        "        # batch[\"question_answer\"] = tokenizer.batch_decode(response_tensors, skip_special_tokens=True)\n",
+        "        # batch[\"query\"] = [tokenizer.decode(query_idx, skip_special_tokens=True) for query_idx in batch[\"input_ids\"]]\n",
+        "        batch[\"response\"] = [tokenizer.decode(r.squeeze()[len(query_idx):], skip_special_tokens=True) for r, query_idx in zip(response_tensors, batch[\"input_ids\"])]\n",
         "\n",
-        "    #### Compute sentiment score\n",
-        "    texts = [q + r for q, r in zip(batch[\"query\"], batch[\"response\"])]\n",
-        "    rewards = reward_pipe(texts, reward_config['batch_size'])\n",
+        "        #### Compute sentiment score\n",
+        "        texts = [q + r for q, r in zip(batch[\"query\"], batch[\"response\"])]\n",
+        "        rewards = reward_pipe(texts, reward_config['batch_size'])\n",
         "\n",
-        "    #### Run PPO step\n",
-        "    stats = ppo_trainer.step(query_tensors, response_tensors, rewards)\n",
-        "    ppo_trainer.log_stats(stats, batch, rewards)\n",
+        "        #### Run PPO step\n",
+        "        stats = ppo_trainer.step(query_tensors, response_tensors, rewards)\n",
+        "        ppo_trainer.log_stats(stats, batch, rewards)\n",
         "\n",
-        "    mean_reward = torch.mean(torch.tensor(rewards))\n",
+        "        mean_reward = torch.mean(torch.tensor(rewards))\n",
         "\n",
-        "    if (epoch + 1) % save_config['save_interval'] == 0:\n",
-        "        save_checkpoint(model, run, epoch, mean_reward, save_config['checkpoint_dir'], 'ppo_checkpoint')\n",
+        "        if (epoch + 1) % save_config['save_interval'] == 0:\n",
+        "            save_checkpoint(model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'ppo_checkpoint')\n",
         "\n",
-        "    if mean_reward > best_reward:\n",
-        "        save_checkpoint(model, run, epoch, mean_reward, save_config['checkpoint_dir'], 'max_reward_ppo')\n",
+        "        if mean_reward > best_reward:\n",
+        "            save_checkpoint(model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'max_reward_ppo')\n",
         "\n",
-        "        best_reward = mean_reward\n",
+        "            best_reward = mean_reward\n",
         "\n",
-        "save_checkpoint(model, run, epoch, mean_reward, save_config['checkpoint_dir'], 'last_checkpoint')"
+        "    save_checkpoint(model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'last_checkpoint')"
       ]
     },
     {
