Fixed question promt truncating, first commit reward validation

--- a/rlhf/rlhf_test.ipynb
+++ b/rlhf/rlhf_test.ipynb
@@ -6,6 +6,31 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "%%bash\n",
+        "pip install cmake\n",
+        "pip install lit"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%%bash\n",
+        "sudo apt-get update\n",
+        "sudo apt-get upgrade\n",
+        "sudo apt-get install build-essential\n",
+        "gcc -v\n",
+        "make -v"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "!pip3 install numpy --pre torch --force-reinstall --index-url https://download.pytorch.org/whl/nightly/cu117"
       ]
     },
@@ -98,7 +123,6 @@
         "\n",
         "data_config = dict(data_file_path='/root/CQA_RLHF/data/1.0-data-div-ans-sep-api-usage.json',\n",
         "                   max_length_promt=256,\n",
-        "                   max_length=512,\n",
         "                   truncate_promt=True,\n",
         "                   padding=False)\n",
         "\n",
@@ -375,6 +399,16 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ppo_trainer.model = torch.compile(ppo_trainer.model)\n",
+        "ppo_trainer.ref_model = torch.compile(ppo_trainer.ref_model)"
+      ]
+    },
+    {
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
@@ -478,7 +512,8 @@
         "if ppo_trainer.accelerator.num_processes == 1:\n",
         "    device = 0 if torch.cuda.is_available() else \"cpu\"  # to avoid a `pipeline` bug\n",
         "\n",
-        "reward_pipe = Reward_pipeline(reward_config['reward_model_name'], device)"
+        "reward_pipe = Reward_pipeline(reward_config['reward_model_name'], device)\n",
+        "reward_pipe.reward_model = torch.compile(reward_pipe.reward_model)"
       ]
     },
     {
