--- a/reward_model/regression/validation/val_reward.ipynb
+++ b/reward_model/regression/validation/val_reward.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "rouge = ROUGEScore()\n",
-    "bleu = SacreBLEUScore()"
+    "bleu = SacreBLEUScore(1, lowercase=True)"
    ]
   },
   {
@@ -223,7 +223,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result_df = pd.DataFrame(val_dict)"
+   ]
   },
   {
    "cell_type": "code",
@@ -231,29 +233,225 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val_rouge1, val_rouge2, val_rougeL, val_bleu = [], [], [], []\n",
-    "val_rewards = []\n",
+    "result_df.to_csv('validation_results.csv', index=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compute metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_rouge1, val_rouge2, val_bleu = [], [], []\n",
     "\n",
-    "for i in range(len(val_dict[\"Question\"])):\n",
-    "    generated_answer = val_dict[\"Answer_gen\"][i]\n",
-    "    original_answer = val_dict[\"Answer_orig\"][i]\n",
+    "for i in tqdm(range(len(result_df))):\n",
+    "    generated_answer = result_df[\"Answer_gen\"][i]\n",
+    "    original_answer = result_df[\"Answer_orig\"][i]\n",
     "    \n",
     "    # calculate Rouge and BLEU scores\n",
-    "    scores = rouge.compute(predictions=generated_answer, references=original_answer)\n",
-    "    val_rouge1.append(scores['rouge1'].item())\n",
-    "    val_rouge2.append(scores['rouge2'].item())\n",
-    "    val_rougeL.append(scores['rougeL'].item())\n",
-    "    val_bleu.append(bleu.compute(predictions=[generated_answer], references=[[original_answer]]).item())\n",
-    "\n",
-    "    # calculate reward score\n",
-    "    reward = reward_model(original_answer, generated_answer)\n",
-    "    val_rewards.append(reward)"
+    "    try:\n",
+    "        rouge_score = rouge(generated_answer, original_answer)\n",
+    "        val_rouge1.append(rouge_score['rouge1_fmeasure'].item())\n",
+    "        val_rouge2.append(rouge_score['rouge2_fmeasure'].item())\n",
+    "        val_bleu.append(bleu(generated_answer, original_answer).item())\n",
+    "    except:\n",
+    "      val_rouge1.append(0)\n",
+    "      val_rouge2.append(0)\n",
+    "      val_bleu.append(0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_df['rouge_1'] = val_rouge1\n",
+    "result_df['rouge_2'] = val_rouge2\n",
+    "result_df['bleu'] = val_bleu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_df.to_csv('validation_results.csv', index=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compute rewards"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('/content/validation_results.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = []\n",
+    "for index, row in tqdm(df.iterrows()):\n",
+    "    q = row['Question']\n",
+    "    a = row['Answer_gen']\n",
+    "    try:\n",
+    "        text.append(q+a)\n",
+    "    except:\n",
+    "        text.append(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 32\n",
+    "predictions = []\n",
+    "\n",
+    "for i in tqdm(range(0, len(text), batch_size)):\n",
+    "    batch = text[i:i+batch_size]\n",
+    "    \n",
+    "    inputs = tokenizer(batch, padding='longest', return_tensors='pt').to(device)\n",
+    "    with torch.no_grad():\n",
+    "        outputs = reward_model(**inputs).logits\n",
+    "    \n",
+    "    batch_predictions = outputs.detach().cpu()\n",
+    "    predictions.append(batch_predictions)\n",
+    "\n",
+    "    del batch_predictions\n",
+    "    del inputs\n",
+    "    gc.collect()\n",
+    "    torch.cuda.empty_cache()\n",
+    "\n",
+    "predictions = torch.cat(predictions, dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rewards = [predictions.numpy()[i][0] for i in range(len(predictions))]\n",
+    "df['rewards'] = rewards\n",
+    "df['metric'] = df[['rouge_1', 'rouge_2', 'bleu']].mean(axis=1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check Spearman and Kendall correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import spearmanr, kendalltau\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(r'D:\\CQA_RLHF\\reward_model\\regression\\validation\\validation_results.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped_data = df.groupby('Q_Id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rank1 = grouped_data['metric'].rank(method='min', ascending=False)\n",
+    "rank2 = grouped_data['rewards'].rank(method='min', ascending=False)\n",
+    "\n",
+    "corr_spearman, _ = spearmanr(rank1, rank2)\n",
+    "\n",
+    "corr_kendall, _ = kendalltau(rank1, rank2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spearman correlation: 0.09\n",
+      "Kendall correlation: 0.07\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Spearman correlation: {round(corr_spearman, 2)}\\nKendall correlation: {round(corr_kendall, 2)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
