--- a/rlhf/rlhf_test.ipynb
+++ b/rlhf/rlhf_test.ipynb
@@ -14,29 +14,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "%%bash\n",
-        "sudo apt-get update\n",
-        "sudo apt-get upgrade\n",
-        "sudo apt-get install build-essential\n",
-        "gcc -v\n",
-        "make -v"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "!pip3 install numpy --pre torch --force-reinstall --index-url https://download.pytorch.org/whl/nightly/cu117"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -66,6 +43,7 @@
       "source": [
         "import torch\n",
         "from tqdm import tqdm\n",
+        "import gc\n",
         "\n",
         "tqdm.pandas()\n",
         "\n",
@@ -141,7 +119,7 @@
         "}\n",
         "\n",
         "save_config = {\n",
-        "    'save_interval': 16,\n",
+        "    'save_interval': 32,\n",
         "    'checkpoint_dir': '/ckpts_ppo'\n",
         "}\n",
         "\n",
@@ -399,16 +377,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "ppo_trainer.model = torch.compile(ppo_trainer.model)\n",
-        "ppo_trainer.ref_model = torch.compile(ppo_trainer.ref_model)"
-      ]
-    },
-    {
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
@@ -512,8 +480,7 @@
         "if ppo_trainer.accelerator.num_processes == 1:\n",
         "    device = 0 if torch.cuda.is_available() else \"cpu\"  # to avoid a `pipeline` bug\n",
         "\n",
-        "reward_pipe = Reward_pipeline(reward_config['reward_model_name'], device)\n",
-        "reward_pipe.reward_model = torch.compile(reward_pipe.reward_model)"
+        "reward_pipe = Reward_pipeline(reward_config['reward_model_name'], device)"
       ]
     },
     {
@@ -573,15 +540,20 @@
         "\n",
         "        mean_reward = torch.mean(torch.tensor(rewards))\n",
         "\n",
+        "        del batch\n",
+        "        del rewards\n",
+        "        gc.collect()\n",
+        "        torch.cuda.empty_cache()\n",
+        "\n",
         "        if (epoch + 1) % save_config['save_interval'] == 0:\n",
-        "            save_checkpoint(model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'ppo_checkpoint')\n",
+        "            save_checkpoint(ppo_trainer.model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'ppo_checkpoint')\n",
         "\n",
         "        if mean_reward > best_reward:\n",
-        "            save_checkpoint(model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'max_reward_ppo')\n",
+        "            save_checkpoint(ppo_trainer.model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'max_reward_ppo')\n",
         "\n",
         "            best_reward = mean_reward\n",
         "\n",
-        "    save_checkpoint(model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'last_checkpoint')"
+        "    save_checkpoint(ppo_trainer.model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'last_checkpoint')"
       ]
     },
     {
