--- a/sft/run.ipynb
+++ b/sft/run.ipynb
@@ -118,6 +118,7 @@
         "        adam_betas=[0.9, 0.95],\n",
         "        weight_decay=0.001,\n",
         "        do_compute_metrics = True,\n",
+        "        do_freeze = True,\n",
         "        freeze_emb = False,\n",
         "        freeze_ln = True,\n",
         "        freeze_attn = True,\n",
