Update rlhf accelerate

--- a/rlhf/rlhf_test.ipynb
+++ b/rlhf/rlhf_test.ipynb
@@ -23,6 +23,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -67,6 +68,15 @@
       },
       "source": [
         "## Configs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import yaml"
       ]
     },
     {
@@ -125,7 +135,7 @@
         "    \"top_p\": 1.0,\n",
         "    \"do_sample\": True,\n",
         "    \"max_new_tokens\": 256,\n",
-        "}\n",
+        "}   \n",
         "\n",
         "config.data_config = data_config\n",
         "config.freeze_config = freeze_config\n",
@@ -271,6 +281,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "IWAnCj4vPjjK"
@@ -348,6 +359,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ckzjBw2fQEVU"
@@ -476,7 +488,7 @@
         "if ppo_trainer.accelerator.num_processes == 1:\n",
         "    device = 0 if torch.cuda.is_available() else \"cpu\"  # to avoid a `pipeline` bug\n",
         "\n",
-        "reward_pipe = Reward_pipeline(reward_config['reward_model_name'], device)"
+        "reward_pipe = Reward_pipeline(reward_config['reward_model_name'], ppo_trainer.accelerator)"
       ]
     },
     {
@@ -542,14 +554,20 @@
         "        torch.cuda.empty_cache()\n",
         "\n",
         "        if (epoch + 1) % save_config['save_interval'] == 0:\n",
-        "            save_checkpoint(ppo_trainer.model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'ppo_checkpoint')\n",
+        "            ppo_trainer.accelerator.wait_for_everyone()\n",
+        "            unwrapped_model = ppo_trainer.accelerator.unwrap_model(ppo_trainer.model)\n",
+        "            save_checkpoint(unwrapped_model, run, global_epo epoch, mean_reward, save_config['checkpoint_dir'], 'ppo_checkpoint')\n",
         "\n",
         "        if mean_reward > best_reward:\n",
-        "            save_checkpoint(ppo_trainer.model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'max_reward_ppo')\n",
+        "            ppo_trainer.accelerator.wait_for_everyone()\n",
+        "            unwrapped_model = ppo_trainer.accelerator.unwrap_model(ppo_trainer.model)\n",
+        "            save_checkpoint(unwrapped_model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'max_reward_ppo')\n",
         "\n",
         "            best_reward = mean_reward\n",
-        "\n",
-        "    save_checkpoint(ppo_trainer.model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'last_checkpoint')"
+        "        \n",
+        "    ppo_trainer.accelerator.wait_for_everyone()\n",
+        "    unwrapped_model = ppo_trainer.accelerator.unwrap_model(ppo_trainer.model)\n",
+        "    save_checkpoint(unwrapped_model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'last_checkpoint')"
       ]
     },
     {
