Bug fix, multi gpu reward inference

--- a/rlhf/rlhf_test.ipynb
+++ b/rlhf/rlhf_test.ipynb
@@ -556,7 +556,7 @@
         "        if (epoch + 1) % save_config['save_interval'] == 0:\n",
         "            ppo_trainer.accelerator.wait_for_everyone()\n",
         "            unwrapped_model = ppo_trainer.accelerator.unwrap_model(ppo_trainer.model)\n",
-        "            save_checkpoint(unwrapped_model, run, global_epo epoch, mean_reward, save_config['checkpoint_dir'], 'ppo_checkpoint')\n",
+        "            save_checkpoint(unwrapped_model, run, global_epo, epoch, mean_reward, save_config['checkpoint_dir'], 'ppo_checkpoint')\n",
         "\n",
         "        if mean_reward > best_reward:\n",
         "            ppo_trainer.accelerator.wait_for_everyone()\n",
